# SynMedVision

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  verify_backend.py
src/api/: app.py
synmedvision/: LICENSE  Makefile  README.md  pyproject.toml
synmedvision/configs/: controlnet.yaml  data.yaml  eval.yaml  train_diffusion_lora.yaml  train_stylegan.yaml
synmedvision/docker/: Dockerfile
synmedvision/src/api/: routes.py  schemas.py
synmedvision/src/cli/: evaluate_images.py  generate.py  prepare.py  report.py  train.py
synmedvision/src/common/: fs.py  seed.py
synmedvision/src/data/: prepare_pcam.py  transforms.py
synmedvision/src/demo/: streamlit_app.py
synmedvision/src/eval/: privacy.py  realism.py  report.py  utility.py
synmedvision/src/models/controlnet/: condition.py
synmedvision/src/models/diffusion/: finetune_lora.py  pipeline.py  sample.py
synmedvision/src/models/stylegan2/: sample.py  train.py
synmedvision/tests/: test_eval_metrics.py  test_io.py  test_privacy.py
synmedvision/web/: package-lock.json  package.json
synmedvision/web/src/: App.tsx  index.css
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx
